# dms

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml
src/: authentication.rs  config.rs  main.rs
static/: signedout.css
templates/: docs.html  leftmenu.html  login.html  signup.html
