[package]
name = "dms"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.6.2"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = { version = "4.6.0", default-features = false, features = ["unicode", "macros"] }
chrono = "0.4.38"
env_logger = "0.11.3"
handlebars = { version = "5.1.2", features = ["dir_source"] }
itertools = "0.13.0"
log = "0.4.21"
rand = "0.8.5"
rust-argon2 = "2.1.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.14"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
